Fixing the white space issuse

--- a/src/webapp/assets/css/by/by_leftPanel.css
+++ b/src/webapp/assets/css/by/by_leftPanel.css
@@ -43,6 +43,7 @@
     border-left: 10px solid #B5B2B2;
     border-bottom: 5px solid transparent;
     display: inline-block;
+    margin-left: 5px;
 }
 .by_leftPanel_accelArrow:after
 {
